@@ -26,3 +26,4 @@ eggs =
 [benchmark-environment]
 Z3C_PT_DEBUG = False
 Z3C_PT_FILECACHE = ${buildout:directory}/cache
+zope_i18n_allowed_languages = en, da, de
