@@ -24,6 +24,7 @@ class ViewPageTemplate(property):
             return self.template.render(view=view,
                                         context=view.context,
                                         request=view.request,
+                                        _context=view.request,
                                         options=kwargs)
         return template        
     
